<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.juliolv.contacto.ConfirmarDatos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top">

        <TextView
            android:id="@+id/tvNombreConfirmar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_editar_contacto"
            android:textSize="@dimen/nombre_confirmar_datos"
            android:layout_gravity="center_vertical"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_fecha_nacimiento_editar_contacto"
            android:textSize="@dimen/confirmar_datos"
            android:layout_gravity="center_vertical"
            />

        <TextView
            android:id="@+id/tvFechaNacimientoConfirmar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_nacimiento_editar_contacto"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/confirmar_datos"
            android:layout_marginLeft="@dimen/left"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_telefono_editar_contacto"
            android:textSize="@dimen/confirmar_datos"
            android:layout_gravity="center_vertical"
            />

        <TextView
            android:id="@+id/tvTelefonoConfirmar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono_editar_contacto"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/confirmar_datos"
            android:layout_marginLeft="@dimen/left"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_email_editar_contacto"
            android:textSize="@dimen/confirmar_datos"
            android:layout_gravity="center_vertical"
            />

        <TextView
            android:id="@+id/tvEmailConfirmar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_editar_contacto"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/confirmar_datos"
            android:layout_marginLeft="@dimen/left"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_descripcion_editar_contacto"
            android:textSize="@dimen/confirmar_datos"
            android:layout_gravity="center_vertical"
            />

        <TextView
            android:id="@+id/tvDescripcionContactoConfirmar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripcion_editar_contacto"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/confirmar_datos"
            android:layout_marginLeft="@dimen/left"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnEditarDatos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boton_editar_datos"
            android:layout_gravity="fill_horizontal"
            android:theme="@style/MiBotonRaise"/>
    </LinearLayout>

</LinearLayout>
