<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.juliolv.contacto.MainActivity"
    android:weightSum="1">

    <android.support.design.widget.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/nombreContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_contacto"
            />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fecha_nacimiento_contacto"
        android:gravity="center"
        android:layout_marginTop="@dimen/top"/>

    <DatePicker
        android:id="@+id/fechaNacimiento"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fecha_nacimiento"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        />

    <android.support.design.widget.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/telefonoContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono_contacto"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/emailContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_contacto"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/descripcionContacto"
            android:layout_width="match_parent"
            android:layout_height="@dimen/descripcion_contacto"
            android:hint="@string/descripcion_contacto"
            />

    </android.support.design.widget.TextInputLayout>

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boton_siguiente"
            android:layout_gravity="fill_horizontal"
            android:theme="@style/MiBotonRaise"/>
    </LinearLayout>

</LinearLayout>
